fixed content alignment

--- a/_sass/default.scss
+++ b/_sass/default.scss
@@ -131,7 +131,7 @@ div #content {
     // margin-top: -5%;
     div.intro {
         margin-left:148px;
-        margin-top:-135px;
+        margin-top:-125px;
         margin-bottom:3%;
     }
     
